# screen-share

./: .gitignore  CMakeLists.txt  Makefile  client.c  main.c
cpu/: compression.c  cpu.c
cuda/: test.cu
include/: audio.h  audiocap.h  compression.h  crypto.h  cuda.h  include.h  net.h  protocol.h  screencap.h  ss.h  unecho.h  video.h
linux/: net.c  ss.c
